--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "expo": "~38.0.8",
+    "expo-image-picker": "^8.4.0",
+    "expo-permissions": "^9.1.0",
     "expo-status-bar": "^1.0.2",
     "prop-types": "^15.7.2",
     "react": "~16.11.0",
