--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~38.0.8",
     "expo-image-picker": "^8.4.0",
     "expo-permissions": "^9.1.0",
+    "expo-sensors": "^9.0.1",
     "expo-status-bar": "^1.0.2",
     "prop-types": "^15.7.2",
     "react": "~16.11.0",
