--- a/app.json
+++ b/app.json
@@ -6,9 +6,9 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/gusteau.png",
+      "resizeMode": "cover",
+      "backgroundColor": "#9a080b"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
